--- a/gb/20/8/22/n12350374.md
+++ b/gb/20/8/22/n12350374.md
@@ -1,21 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ujypni3813/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ujypni3813/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ujypni3813/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ujypni3813/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ujypni3813/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ujypni3813/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ujypni3813/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ujypni3813/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ujypni3813/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ujypni3813/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ujypni3813/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ujypni3813/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ujypni3813/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ujypni3813/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ujypni3813/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ujypni3813/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ujypni3813/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ujypni3813/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ujypni3813/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ujypni3813/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ujypni3813/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ujypni3813/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ujypni3813/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ujypni3813/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>云门舞集故宫南院精彩演出 民众热情参与</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/a8058f0b9088c7397424c32c497dbede-600x400.jpg" />
 <h6>“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，主持人带领舞者与观众热情谢幕的盛况。（蔡上海／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年08月22日讯】（大纪元记者蔡上海台湾嘉义报导）“2020国泰<ahref="https://github.com/ujypni3813/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF%E8%8A%82.md#1">艺术节</a>-与云门共舞”22日下午3点在<ahref="https://github.com/ujypni3813/djy/blob/master/gb/tag/%E6%95%85%E5%AE%AB%E5%8D%97%E9%99%A2%E5%8D%9A%E7%89%A9%E9%A6%86.md#1">故宫南院博物馆</a>二楼大厅演出，吸引大批民众热情参与，现场超过千人观看，不但二楼大厅挤得水泄不通，连上三楼的阶梯也坐满观众，一睹<ahref="https://github.com/ujypni3813/djy/blob/master/gb/tag/%E4%BA%91%E9%97%A8%E8%88%9E%E9%9B%86.md#1">云门舞集</a>的风采，而舞者更是打破舞台与观众席界线，与民众共舞同乐零距离。</p>
-<figure id="12350383" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/08/8c0de3029a97a44b68da8bf2c99e4b45-450x338.jpg" alt="“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，主持人一一介绍舞者热情谢幕的镜头。" width="500" /><figcaption class="wp-caption-text">“2020国泰<ahref="https://github.com/ujypni3813/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF%E8%8A%82.md#1">艺术节</a>-与云门共舞”22日下午在<ahref="https://github.com/ujypni3813/djy/blob/master/gb/tag/%E6%95%85%E5%AE%AB%E5%8D%97%E9%99%A2%E5%8D%9A%E7%89%A9%E9%A6%86.md#1">故宫南院博物馆</a>二楼大厅演出，主持人一一介绍舞者热情谢幕的镜头。（蔡上海／大纪元）</figcaption></figure>
-<figure id="12350382" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/08/325c34a9bbed25dcd9efd60da5913b99-450x338.jpg" alt="“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，节目结束前，舞者打破舞台与观众席界线，与民众共舞同乐零距离的精彩画面。" width="500" /><figcaption class="wp-caption-text">“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，节目结束前，舞者打破舞台与观众席界线，与民众共舞同乐零距离的精彩画面。（蔡上海／大纪元）</figcaption></figure>
-<figure id="12350381" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/08/f9313bfb2116f0eb2d1d1abb0db2c2c7-450x338.jpg" alt="“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，节目结束前，舞者打破舞台与观众席界线，与民众共舞同乐零距离的镜头。" width="500" /><figcaption class="wp-caption-text">“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，节目结束前，舞者打破舞台与观众席界线，与民众共舞同乐零距离的镜头。（蔡上海／大纪元）</figcaption></figure>
-<figure id="12350379" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/08/e2106f817b8109dc8ee389b4c8c841de-450x338.jpg" alt="“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，在节目中场，舞者打破舞台与观众席界线，与民众共舞同乐零距离的精彩画面。" width="500" /><figcaption class="wp-caption-text">“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，在节目中场，舞者打破舞台与观众席界线，与民众共舞同乐零距离的精彩画面。（蔡上海／大纪元）</figcaption></figure>
-<figure id="12350378" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/08/a32a440b2afd75305784d12918658952-450x338.jpg" alt="“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，图为舞者的精彩表演镜头。" width="500" /><figcaption class="wp-caption-text">“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，图为舞者的精彩表演镜头。（蔡上海／大纪元）</figcaption></figure>
-<figure id="12350377" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/08/8d70b48e09c3c68eee304dcaa1dbc1ba-450x338.jpg" alt="“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，图为舞者表演的精彩画面。" width="500" /><figcaption class="wp-caption-text">“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，图为舞者表演的精彩画面。（蔡上海／大纪元）</figcaption></figure>
-<figure id="12350376" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/08/07fef79a3973d184ab3eef85cdd7388d-450x338.jpg" alt="“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，图为舞者表演的精彩画面。" width="500" /><figcaption class="wp-caption-text">“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，图为舞者表演的精彩画面。（蔡上海／大纪元）</figcaption></figure>
+<p>【大纪元2020年08月22日讯】（大纪元记者蔡上海台湾嘉义报导）“2020国泰<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF%E8%8A%82.md#1">艺术节</a>-与云门共舞”22日下午3点在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%95%85%E5%AE%AB%E5%8D%97%E9%99%A2%E5%8D%9A%E7%89%A9%E9%A6%86.md#1">故宫南院博物馆</a>二楼大厅演出，吸引大批民众热情参与，现场超过千人观看，不但二楼大厅挤得水泄不通，连上三楼的阶梯也坐满观众，一睹<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BA%91%E9%97%A8%E8%88%9E%E9%9B%86.md#1">云门舞集</a>的风采，而舞者更是打破舞台与观众席界线，与民众共舞同乐零距离。</p>
+<figure id="12350383" aria-describedby="caption-12350383" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/8c0de3029a97a44b68da8bf2c99e4b45-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/08/8c0de3029a97a44b68da8bf2c99e4b45-450x338.jpg" alt="“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，主持人一一介绍舞者热情谢幕的镜头。" width="500" /></a><figcaption id="caption-12350383" class="wp-caption-text">“2020国泰<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF%E8%8A%82.md#1">艺术节</a>-与云门共舞”22日下午在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%95%85%E5%AE%AB%E5%8D%97%E9%99%A2%E5%8D%9A%E7%89%A9%E9%A6%86.md#1">故宫南院博物馆</a>二楼大厅演出，主持人一一介绍舞者热情谢幕的镜头。（蔡上海／大纪元）</figcaption></figure>
+<figure id="12350382" aria-describedby="caption-12350382" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/325c34a9bbed25dcd9efd60da5913b99-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/08/325c34a9bbed25dcd9efd60da5913b99-450x338.jpg" alt="“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，节目结束前，舞者打破舞台与观众席界线，与民众共舞同乐零距离的精彩画面。" width="500" /></a><figcaption id="caption-12350382" class="wp-caption-text">“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，节目结束前，舞者打破舞台与观众席界线，与民众共舞同乐零距离的精彩画面。（蔡上海／大纪元）</figcaption></figure>
+<figure id="12350381" aria-describedby="caption-12350381" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/f9313bfb2116f0eb2d1d1abb0db2c2c7-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/08/f9313bfb2116f0eb2d1d1abb0db2c2c7-450x338.jpg" alt="“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，节目结束前，舞者打破舞台与观众席界线，与民众共舞同乐零距离的镜头。" width="500" /></a><figcaption id="caption-12350381" class="wp-caption-text">“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，节目结束前，舞者打破舞台与观众席界线，与民众共舞同乐零距离的镜头。（蔡上海／大纪元）</figcaption></figure>
+<figure id="12350379" aria-describedby="caption-12350379" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/e2106f817b8109dc8ee389b4c8c841de-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/08/e2106f817b8109dc8ee389b4c8c841de-450x338.jpg" alt="“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，在节目中场，舞者打破舞台与观众席界线，与民众共舞同乐零距离的精彩画面。" width="500" /></a><figcaption id="caption-12350379" class="wp-caption-text">“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，在节目中场，舞者打破舞台与观众席界线，与民众共舞同乐零距离的精彩画面。（蔡上海／大纪元）</figcaption></figure>
+<figure id="12350378" aria-describedby="caption-12350378" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/a32a440b2afd75305784d12918658952-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/08/a32a440b2afd75305784d12918658952-450x338.jpg" alt="“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，图为舞者的精彩表演镜头。" width="500" /></a><figcaption id="caption-12350378" class="wp-caption-text">“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，图为舞者的精彩表演镜头。（蔡上海／大纪元）</figcaption></figure>
+<figure id="12350377" aria-describedby="caption-12350377" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/8d70b48e09c3c68eee304dcaa1dbc1ba-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/08/8d70b48e09c3c68eee304dcaa1dbc1ba-450x338.jpg" alt="“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，图为舞者表演的精彩画面。" width="500" /></a><figcaption id="caption-12350377" class="wp-caption-text">“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，图为舞者表演的精彩画面。（蔡上海／大纪元）</figcaption></figure>
+<figure id="12350376" aria-describedby="caption-12350376" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/07fef79a3973d184ab3eef85cdd7388d-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/08/07fef79a3973d184ab3eef85cdd7388d-450x338.jpg" alt="“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，图为舞者表演的精彩画面。" width="500" /></a><figcaption id="caption-12350376" class="wp-caption-text">“2020国泰艺术节-与云门共舞”22日下午在故宫南院博物馆二楼大厅演出，图为舞者表演的精彩画面。（蔡上海／大纪元）</figcaption></figure>
 <p>“2020国泰艺术节-与云门共舞”，系由艺术总监郑宗龙精心编排的70分钟节目，</p>
-<p>故宫南院这场演出，观众不但可以同时欣赏<ahref="https://github.com/ujypni3813/djy/blob/master/gb/tag/%E4%BA%91%E9%97%A8%E8%88%9E%E9%9B%86.md#1">云门舞集</a>创办人林怀民老师与郑宗龙的精彩舞作选粹，现场近距离欣赏国际级演出，舞作间更穿插舞者与观众的互动，让民众亲身体会舞蹈带来的纯粹与快乐，将文化美学轻松融入常民生活中，可以说是身体的博物馆，在故宫南院演出相得益彰。</p>
+<p>故宫南院这场演出，观众不但可以同时欣赏<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BA%91%E9%97%A8%E8%88%9E%E9%9B%86.md#1">云门舞集</a>创办人林怀民老师与郑宗龙的精彩舞作选粹，现场近距离欣赏国际级演出，舞作间更穿插舞者与观众的互动，让民众亲身体会舞蹈带来的纯粹与快乐，将文化美学轻松融入常民生活中，可以说是身体的博物馆，在故宫南院演出相得益彰。</p>
 <p>故宫南院表示，23日下午3点在故宫南院2楼大厅还有一场云门舞集演出，25日七夕情人节当晚3D水幕魔镜秀开始前，于游客中心发放920朵蓝色玫瑰花，送给当天携伴来南院的游客，意味“南院就爱你”（谐音南院920），代表故宫南院对观众的服务承诺，同时祝福情人们永浴爱河。◇</p>
 <p>责任编辑：陈玟绮</p>
 
@@ -23,48 +23,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/19/11/4/n11631489.md#1">移居北台湾最美丽的富人湾</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/19/11/7/n11638918.md#1">庆祝台加交流  两场温馨音乐会11月底启幕</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/19/12/16/n11725384.md#1">从网路打到球场 真“一中”揭晓</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/6/28/n12217279.md#1">卫武营下半年51档展演 号召众人“归营”</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/7/25/n12283047.md#1">云林海洋音乐祭  邀你High一夏</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/20/n12345733.md#1">故宫南院与云门共舞  无人机群飞闪游七夕</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/22/n12350255.md#1">挑战自我 200骑士单车绕行大鹏湾300公里</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/22/n12350083.md#1">刘克襄“从嘉义出发的旅行书写”文学讲座</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/22/n12350109.md#1">守护乡民健康  褒忠乡公所举办健走活动</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/22/n12349845.md#1">抢救血荒 云林后宪“珍爱生命联合捐血”活动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/11/4/n11631489.md#1">移居北台湾最美丽的富人湾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/11/7/n11638918.md#1">庆祝台加交流  两场温馨音乐会11月底启幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/12/16/n11725384.md#1">从网路打到球场 真“一中”揭晓</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/6/28/n12217279.md#1">卫武营下半年51档展演 号召众人“归营”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/25/n12283047.md#1">云林海洋音乐祭  邀你High一夏</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/8/20/n12345733.md#1">故宫南院与云门共舞  无人机群飞闪游七夕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13689924.md#1">黄敏惠表扬189位模范儿童</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13689366.md#1">嘉靖乾隆巧思竞艳  青花彩瓷景泰蓝南院登场</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689127.md#1">屏东连6年臭氧王 环盟吁县长候选人表态</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688256.md#1">嘉市65岁以上长者打疫苗加码 获千元商品卡</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/6/n10695964.md#1" target="_blank">林辉：五四运动“第一烈士”是历史的赝品</a></li><li><a href="https://github.com/ujypni3813/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/2/n11494502.md#1" target="_blank">探寻东方养生道 希腊青年在修炼中得到升华</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/26/n10174332.md#1" target="_blank">周晓辉：叶利钦退出苏共引发退党潮</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/16/n10855894.md#1" target="_blank">绝处逢生 韩国男子见证两个奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/6/7/n12168858.md#1">“势败休云贵  家亡莫论亲”  板儿递给巧姐的那个佛手</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/16/n12335448.md#1">神秘的中国绝代王后（上）</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/13/n12326957.md#1">孟尝君“狡兔三窟”为何绝子绝孙？</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/16/n12335682.md#1">神秘的中国绝代王后（下）</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/14/n12329430.md#1">疗愈人心的天堂歌声——创作歌手凯蒂?曼蒂克</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/21/n12348243.md#1">【重播】川普：若拜登当选 中共将拥有美国</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/21/n12348564.md#1">【薇羽看世间】白俄罗斯颜色革命的启示</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/21/n12348737.md#1">【拍案惊奇】习李出访之演技 乐山市民“逃亡”</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/20/n12344501.md#1">忧因言获罪 中国鸡西市前副市长出逃美国</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/20/n12345706.md#1">中共大使“人肉地毯”门发酵 政要民众怒斥</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/20/n12345571.md#1">蓬佩奥回应华春莹邀请：不配合中共做秀</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/20/n12346158.md#1">发哥批港府罔顾民生 心痛市民遍地开餐像乞丐</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/19/n12343359.md#1">传伊能静将复出拍戏 年过半百拒绝演妈</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/20/n12346785.md#1">女儿在校被说长得丑 陶虹一句安慰获赞有智慧</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/21/n12348722.md#1">曾喊话准备入籍台湾 黄秋生返港被劝不宜久留</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/19/n12343647.md#1">晒儿子哈利送生日礼物 庾澄庆直呼超喜欢</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/20/n12344064.md#1">3类人最易缺蛋白质 教你正确补充增肌</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/20/n12344925.md#1">小鸟在宾士车筑巢 阿联酋王子护鸟封锁车位</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/21/n12347512.md#1">美魔术师恶作剧 妻子反应迟钝 网友笑翻</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/19/n12342347.md#1">香蕉如何延长保存期限？从选购到冷冻的秘诀</a></li>
-<li><a href="https://github.com/ujypni3813/djy/blob/master/gb/20/8/20/n12346253.md#1">按摩3穴位 缓解胃食道逆流 2食物强胃助消化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ujypni3813/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ujypni3813/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/22/n12350374.htm">云门舞集故宫南院精彩演出 民众热情参与</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/22/n12350374.htm">云门舞集故宫南院精彩演出 民众热情参与</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/ujypni3813/djy/blob/master/gb/20/8/22/n12350374.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ujypni3813/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ujypni3813/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ujypni3813/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ujypni3813/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujypni3813/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/8/22/n12350374.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
